...
            "state": "translated",
            "value": "關於"
          }
        }
      }
    },
    "Accept": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Accept"
...
            "state": "translated",
            "value": "嘗試重新連線至此對等端"
          }
        }
      }
    },
    "Back to Discovery": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Back to Discovery"
...
            "state": "translated",
            "value": "請連接相同的 WiFi 網路以傳輸檔案"
          }
        }
      }
    },
    "Connected": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Connected"
...
            "state": "translated",
            "value": "連線次數"
          }
        }
      }
    },
    "Connection Error": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Connection Error"
...
            "state": "translated",
            "value": "已停用的功能將自動拒絕收到的請求。"
          }
        }
      }
    },
    "Disconnect": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Disconnect"
...
            "state": "translated",
            "value": "離線"
          }
        }
      }
    },
    "Go online": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Go online"
...
            "state": "translated",
            "value": "名稱"
          }
        }
      }
    },
    "Nearby": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Nearby"
...
